--- a/IdentityManager/appsettings.json
+++ b/IdentityManager/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Server=LAPTOP-655716OI\\SQLEXPRESS;Database=IdentityManager;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "SendGrid": {
-    "ApiKey": "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"
+    "ApiKey": ""
   }
 }
